--- a/wireless_das_ufsc/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/wireless_das_ufsc/application/TDMA/ServerTDMA/Makefile_AVR
@@ -1,21 +1,21 @@
 # Makefile for build platform
 
 # DEFINIR PREFIXO
-EXP		?= exp1
+EXP		?= lldn_app
 
 # DEFINIR ENDEREÇO
 ADDR	?= 0x0001
 
 # SELECIONAR O KIT PARA COMPILAÇÂO
-KIT		:= KITRFA1
-#KIT		:= MEGA128RFA1
+#KIT		:= KITRFA1
+KIT		:= MEGA128RFA1
 #KIT		:= MEGA256RFR2
 
 # VALORES DEFAULT
 # Descomentar uma linha acima para trocar de placa
-EXP		?= exp1
+EXP		?= lldn_app
 ADDR	?= 0x0001
-KIT		?= KITRFA1
+KIT		?= MEGA128RFA1
 
 ifneq (,$(filter $(KIT),KITRFA1))
 	include Makefile_m128rfa1_kitrfa1
