--- a/wireless_das_ufsc/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/wireless_das_ufsc/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -26,7 +26,7 @@ CFLAGS += -DPHY_ENABLE_RANDOM_NUMBER_GENERATOR
 CFLAGS += -DHAL_UART_CHANNEL=0
 CFLAGS += -DAPP_ADDR=$(ADDR)
 
-EXP ?= exp2
+EXP ?= lldn_app
 ADDR ?= 0x0001
 
 ## General Flags
@@ -50,8 +50,12 @@ endif
 ifneq (,$(filter $(EXP),exp3))
 CSRC	+= ServerTDMARedundante.c
 endif
-CSRC	+= Solver.c
-CSRC	+= Energy.c
+ifneq (,$(filter $(EXP),lldn_app))
+CSRC	+= LLDN_APP.c
+endif
+
+# CSRC	+= Solver.c
+# CSRC	+= Energy.c
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
