--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
@@ -41,15 +41,24 @@ ROOT_DIR = ../../..
 
 ifneq (,$(filter $(EXP),BASIC))
 CSRC	+= ServerBASIC.c
+CSRC	+= Solver.c
+CSRC	+= Energy.c
 endif
 ifneq (,$(filter $(EXP),TDMA))
 CSRC	+= ServerTDMA.c
+CSRC	+= Solver.c
+CSRC	+= Energy.c
 endif
 ifneq (,$(filter $(EXP),TDMARed))
 CSRC	+= ServerTDMARedundante.c
-endif
 CSRC	+= Solver.c
 CSRC	+= Energy.c
+endif
+
+ifneq (,$(filter $(EXP),LLDN))
+CSRC	+= ServerLLDN.c
+endif
++= Energy.c
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
