Revert "Phy_DataReq and PromiscuousMode mudados"
This reverts commit cbc7215e37b370be2a3029d53c95677e08be7338.

--- a/application/TDMA/ServerTDMA/Makefile_ARM
+++ b/application/TDMA/ServerTDMA/Makefile_ARM
@@ -68,7 +68,7 @@ ROOT_DIR = ../../..
 #CSRC	+= Solver.c
 #CSRC	+= Energy.c
 
-CSRC += Teste.c
+CSRC += hw_timer_lldn.c
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
