--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -59,8 +59,7 @@ CSRC	+= Energy.c
 endif
 
 ifneq (,$(filter $(EXP),LLDN))
-#CSRC	+= ServerLLDN.c
-CSRC += teste_envio.c
+CSRC	+= ServerLLDN.c
 endif
 
 # List any extra directories to look for include files here.
