wm400 associacao funcionando

--- a/application/TDMA/ServerTDMA/Makefile_ARM
+++ b/application/TDMA/ServerTDMA/Makefile_ARM
@@ -26,7 +26,7 @@ STACK_TYPE = LwMesh
 STACK_VERSION = TDMA
 USE_SIO_MANAGER = 1
 SIO2HOST_CHANNEL = SIO_USB
-ADDR = 0x0001
+ADDR = 0x0004
 
 # Build specific properties
 #TAL_TYPE = AT86RF231
@@ -68,8 +68,8 @@ ROOT_DIR = ../../..
 #CSRC	+= Solver.c
 #CSRC	+= Energy.c
 
-CSRC += Teste.c
-#CSRC += ServerLLDN.c
+#CSRC += Teste.c
+CSRC += ServerLLDN.c
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
