--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
@@ -56,8 +56,8 @@ CSRC	+= Energy.c
 endif
 
 ifneq (,$(filter $(EXP),LLDN))
-# CSRC	+= ServerLLDN.c
-CSRC += teste_envio.c
+ CSRC	+= ServerLLDN.c
+#CSRC += teste_envio.c
 endif
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
