--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ wireless_das_ufsc/application/TDMA/ServerTDMA/exp1_m128rfa1_kitrfa1_0x0001.eep
 *.srec
 *.lss
 *.eep
+*.lst
+*.o
+*.eep
+*.elf
+*.hex
+*.srec
