Arrumado ACK para endereço/timeslot 8

--- a/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/application/TDMA/ServerTDMA/Makefile_AVR
@@ -4,11 +4,11 @@
 EXP		?= LLDN
 
 # DEFINIR ENDEREÇO
-ADDR	?= 0x0000
+ADDR	?= 0x0008
 
 # SELECIONAR O KIT PARA COMPILAÇÂO
-#KIT		:= KITRFA1
-KIT	:= MEGA128RFA1
+KIT		:= KITRFA1
+#KIT	:= MEGA128RFA1
 #KIT	:= MEGA256RFR2
 
 # VALORES DEFAULT
