Added dlfcn to project

--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -26,6 +26,7 @@ CFLAGS += -DPHY_ENABLE_RANDOM_NUMBER_GENERATOR
 CFLAGS += -DHAL_UART_CHANNEL=0
 CFLAGS += -DAPP_ADDR=$(ADDR)
 
+
 EXP ?= exp2
 ADDR ?= 0x0001
 
@@ -58,16 +59,19 @@ CSRC	+= Solver.c
 CSRC	+= Energy.c
 endif
 
+
 ifneq (,$(filter $(EXP),LLDN))
 CSRC	+= ServerLLDN.c
 #CSRC += teste_envio.c
 endif
-
+DEFINES += _WINDOWS
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
 EXTRAINCDIRS +=																	\
 	config																		\
-	drivers
+	lp_solve_5.5																\
+	drivers																		\
+	dlfc-win32\dlfcn-win32-master\src	
 
 include																			\
 	$(ROOT_DIR)/platform/$(PLATFORM)/platform.mk
