node sleeping after beacon and wakeing up to send data

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ wireless_das_ufsc/application/TDMA/ServerTDMA/exp1_m128rfa1_kitrfa1_0x0001.eep
 *.sym
 *.o
 application/TDMA/ServerTDMA/.vs/ServerTDMA/v14/.atsuo
+application/TDMA/ServerTDMA/.vs/ServerTDMA/v14/.atsuo
