implemented sleep_or_idle states
implemented sleep_or_idle states for energy consumption measurments

--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -57,10 +57,12 @@ CSRC	+= ServerTDMARedundante.c
 CSRC	+= Solver.c
 CSRC	+= Energy.c
 endif
-
 ifneq (,$(filter $(EXP),LLDN))
 #CSRC	+= ServerLLDN.c
 CSRC += teste_envio.c
+endif
+ifneq (,$(filter $(EXP),SLEEP_OR_WAIT))
+CSRC	+= energy-consumption-testes/sleep_or_idle_states.c
 endif
 
 # List any extra directories to look for include files here.
