--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -61,8 +61,13 @@ ifneq (,$(filter $(EXP),LLDN))
 #CSRC	+= ServerLLDN.c
 CSRC += teste_envio.c
 endif
+
 ifneq (,$(filter $(EXP),SLEEP_OR_WAIT))
-CSRC	+= energy-consumption-testes/sleep_or_idle_states.c
+CSRC	+= sleep_or_idle_states.c
+endif
+
+ifneq (,$(filter $(EXP),WAKE_N_SEND))
+CSRC	+= wake_n_send.c
 endif
 
 # List any extra directories to look for include files here.
