implemented wake-up and receive

--- a/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/application/TDMA/ServerTDMA/Makefile_AVR
@@ -1,10 +1,10 @@
 # Makefile for build platform
 
 # DEFINIR PREFIXO
-EXP		?= SLEEP_OR_WAIT
+EXP		?= RECEIVE_MSG
 
 # DEFINIR ENDEREÇO
-ADDR	?= 0x0000
+ADDR	?= 0x0001
 
 # SELECIONAR O KIT PARA COMPILAÇÂO
 #KIT		:= KITRFA1
