--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -58,12 +58,16 @@ CSRC	+= Solver.c
 CSRC	+= Energy.c
 endif
 ifneq (,$(filter $(EXP),LLDN))
-#CSRC	+= ServerLLDN.c
-CSRC += teste_envio.c
+CSRC	+= ServerLLDN.c
+#CSRC += teste_envio.c
 endif
 
 ifneq (,$(filter $(EXP),SLEEP_OR_WAIT))
 CSRC	+= sleep_or_idle_states.c
+endif
+
+ifneq (,$(filter $(EXP),RECEIVE_MSG))
+CSRC	+= receive_msg.c
 endif
 
 ifneq (,$(filter $(EXP),WAKE_N_SEND))
