implemented lldn no retransmition

--- a/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/application/TDMA/ServerTDMA/Makefile_AVR
@@ -1,7 +1,7 @@
 # Makefile for build platform
 
 # DEFINIR PREFIXO
-EXP		?= RECEIVE_MSG
+EXP		?= SUPERFRAME_NO_RTS_LLDN
 
 # DEFINIR ENDEREÇO
 ADDR	?= 0x0001
