--- a/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/application/TDMA/ServerTDMA/Makefile_AVR
@@ -1,10 +1,10 @@
 # Makefile for build platform
 
 # DEFINIR PREFIXO
-EXP		?= SUPERFRAME_NO_RTS_LLDN
+EXP		?= LLDN_RT
 
 # DEFINIR ENDEREÇO
-ADDR	?= 0x0001
+ADDR	?= 0x0000
 
 # SELECIONAR O KIT PARA COMPILAÇÂO
 #KIT		:= KITRFA1
