--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_kitrfa1
@@ -60,6 +60,11 @@ CSRC	+= ServerLLDN.c
 #CSRC += teste_envio.c
 endif
 
+ifneq (,$(filter $(EXP),LLDN_RT))
+CSRC	+= ServerLLDN_RT.c
+endif
+
+
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
 EXTRAINCDIRS +=																	\
