--- a/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
+++ b/application/TDMA/ServerTDMA/Makefile_m128rfa1_wm100duino
@@ -78,6 +78,10 @@ ifneq (,$(filter $(EXP),SUPERFRAME_NO_RTS_LLDN))
 CSRC	+= superframe_no_rts_lldn.c
 endif
 
+ifneq (,$(filter $(EXP),LLDN_RT))
+CSRC	+= ServerLLDN_RT.c
+endif
+
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
