pronto para começar dev online

--- a/application/TDMA/ServerTDMA/Makefile_AVR
+++ b/application/TDMA/ServerTDMA/Makefile_AVR
@@ -4,11 +4,11 @@
 EXP		?= LLDN_RT
 
 # DEFINIR ENDEREÇO
-ADDR	?= 0x0000
+ADDR	?= 0x0003
 
 # SELECIONAR O KIT PARA COMPILAÇÂO
-#KIT		:= KITRFA1
-KIT		:= MEGA128RFA1
+KIT		:= KITRFA1
+#KIT		:= MEGA128RFA1
 #KIT	:= MEGA256RFR2
 
 # VALORES DEFAULT
